# wundernn_hack

./: .gitignore  README_transformations.md  __init__.py  config.py  eda.ipynb  main.py  pyproject.toml  quick_variance_check.py  size_check copy.py  size_check.py  test_transformations.py  transformation_report.md  variance_analysis_report.md  variance_test.py
gigant/: train.py
gigant_off_decoy/: solution.py  train.py
latest_trans_concept/: model.py  solution.py  train.py
latest_trans_concept_change/: model.py  solution.py  train.py
latest_trans_concept_new_par/: config.py  train.py
latest_trans_concept_optuna/: __init__.py  solution.py  train.py
my_transformer_solution_30_ep /: solution.py
prep_data/: data_transformer.py  solution.py  train.py
transformer_nDim256/: solution.py  train.py
transformer_nDim256_ep30/: solution.py  train.py
tuning_chempiona/: solution.py  train.py
