[project]
name = "wundernn-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
